# my-cpp-repl-study

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_ANALYSIS_AND_REFACTORING.md  CODE_ANALYSIS_AND_REFACTORING.md.bak  Doxyfile  IMPROVEMENT_CHECKLIST.md  IMPROVEMENT_CHECKLIST_OLD.md  NEXT_VERSION_ROADMAP.md  PERFORMANCE_VERIFICATION.md  README.md  ast_context.cpp  booteditor.txt  clang_ast_adapter.cpp  debug_output.json  decl_amalgama.hpp  format-code.sh  main.cpp  precompiledheader.hpp  printerOutput.hpp  printerOutput0.cpp  printerOutput1.cpp  printerOutput2.cpp  printerOverloads.cpp  printerOverloads.hpp  repl.cpp  repl.hpp  repl_0.cpp  repl_0.json  repl_1.cpp  repl_1.json  repl_2.cpp  repl_2.json  stdafx.hpp  wrapper_repl_2.cpp
.github/: copilot-instructions.md
.github/workflows/: cmake-single-platform-armv7.yml  cmake-single-platform.yml
assets/icons/: README.md
docs/: API_REFERENCE.md  DEVELOPER.md  DOCUMENTATION_GUIDE.md  INSTALLATION.md  QUICK_REFERENCE.md  README.md  USER_GUIDE.md
docs/examples/: advanced_demo.repl  basic_demo.repl  include_vs_eval_demo.repl  math_functions.cpp  safe_header.h  unsafe_for_include.cpp
examples/: command_system_example.hpp  completion_demo.cpp  integration_example.cpp  lsp_completion_demo.cpp  refactored_implementation.cpp  refactored_interfaces.hpp  testing_examples.cpp  verbosity_demo.cpp
include/: backtraced_exceptions.hpp
include/analysis/: ast_analyzer.hpp  ast_context.hpp  clang_ast_adapter.hpp
include/commands/: command_registry.hpp  repl_commands.hpp
include/compiler/: compiler_service.hpp
include/completion/: README.md  clang_completion.hpp  completion_types.hpp  readline_integration.hpp  simple_readline_completion.hpp
include/execution/: execution_engine.hpp  spawn_to_mem_fd.hpp  symbol_resolver.hpp
include/ui/: output_manager.hpp
include/utility/: Strutils.hpp  eval_scope_exit.hpp  library_introspection.hpp
script/: convert_icons.sh  download_icons.sh
src/compiler/: compiler_service.cpp
src/completion/: LspClangdService.hpp  clang_completion.cpp  lsp_readline_integration.cpp  lsp_readline_integration.hpp  readline_integration.cpp  simple_readline_completion.cpp
src/execution/: execution_engine.cpp  symbol_resolver.cpp
src/ui/: output_manager.cpp
tests/: CMakeLists.txt  clangteste.cpp  lsp_min_client.cpp  mini_clang_service  mini_clang_service.cpp  minimal_clang_example.cpp  test_pch_async.cpp  tests.cpp
tests/analysis/: test_ast_context.cpp  test_static_duration.cpp
tests/compiler/: test_compiler_service.cpp
tests/completion/: test_clang_completion.cpp  test_readline_integration.cpp
tests/test_helpers/: mock_build_settings.hpp  temp_directory_fixture.hpp
tests/utility/: test_library_introspection.cpp
utility/: assembly_info.hpp  backtraced_exceptions.cpp  file_raii.hpp  library_introspection.cpp  monitor_changes.cpp  ninjadev.cpp  quote.cpp  quote.hpp  system_exec.hpp
